@@ -8,6 +8,7 @@ export(downloadGEOData)
 export(heterogeneityTest)
 export(makeHeatmap)
 export(metaAnalysisDE)
+export(missGenesImput)
 export(pvalueIndAnalysis)
 export(seeCov)
 import(DExMAdata)
@@ -15,6 +16,7 @@ import(stats)
 import(Biobase)
 import(limma)
 import(sva)
+importFrom("bnstruct", "knn.impute")
 importFrom("utils", "setTxtProgressBar", "txtProgressBar")
 importFrom("methods", "is")
 importFrom("scales", "rescale")
