@@ -79,3 +79,13 @@
 }
 
 
+@article{2020:Mancuso,
+    Author = {Christopher A. Mancuso and Jacob L. Canfield and Deepak Singla and Arjun Krishnan},
+	Journal = {Nucleic Acids Research},
+	Title = {A flexible, interpretable, and accurate approach for imputing the expression of unmeasured genes},
+	Year = 2020,
+	Volume = 48,
+	Number = 21,
+	Pages = {e125--e125},
+    url = {https://doi.org/10.1093/nar/gkaa881}
+}
